fix(arc-1749): make content pages table horizontal scrollable
https://meemoo.atlassian.net/browse/ARC-1749

--- a/src/modules/shared/layouts/SidebarLayout/SidebarLayout.module.scss
+++ b/src/modules/shared/layouts/SidebarLayout/SidebarLayout.module.scss
@@ -37,6 +37,7 @@ $l-sidebar-collapse-to: "md";
 		width: 70%;
 		padding-bottom: $c-feedback-button-height;
 		flex-grow: 1;
+		overflow-x: auto;
 
 		// sidebar layout in another sidebar layout
 		.#{$component} {
